fix mobile align

--- a/css/style.css
+++ b/css/style.css
@@ -7,7 +7,7 @@ body {
 }
 
 .contact-right {
-  min-width: 5.7em;
+  min-width: 3em;
 }
 
 .bg-dark {
